--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.12",
@@ -19,6 +20,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
